--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "author": "Khaled Allam",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "http": "^0.0.1-security",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
