--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Khaled Allam",
   "dependencies": {
+    "connect-timeout": "^1.9.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
@@ -16,6 +17,7 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@types/connect-timeout": "^0.0.37",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.0"
   }
